# techblog_cms

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.django  Dockerfile.nginx  Dockerfile.nginx.static  LICENSE  README.md  SimpleWebServer.ps1  assitant.agent.prompt.md  cms-ctl.sh  conftest.py  cookies.txt  create_sample_data.py  csrf_debug_playwright.py  deploy.sh  docker-compose.override.yml.example  docker-compose.staging.yml  docker-compose.yml  gunicorn.conf.py  login_response.html  login_response2.html  main.py  manage.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_rest_api.py
.github/: copilot-instructions.md  copilot-instructions.md.sample  security-rule.copilot-instructions.md
.github/chatmodes/: gcf1-pipeline.chatmode.md
.github/workflows/: claude-code-review.yml  docker-publish.yml
app/: Dockerfile
app/techblog_cms/: models.py  settings.py
docker/: entrypoint.sh  init-db.sh
docs/: CONFIGURATION.md  QUICK_CONFIG_REFERENCE.md
nginx/: Dockerfile
nginx/conf.d/: default.conf
scripts/: create_test_data.py  init-letsencrypt.sh  production_checklist.sh  renew-cert.sh
static/: index.html
techblog_cms/: context_processors.py  health.py  import os.py  models.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
techblog_cms/migrations/: 0001_initial.py
techblog_cms/templates/: article_delete_confirm.html  article_delete_success.html  article_detail.html  article_editor.html  article_list.html  base.html  category_detail.html  category_list.html  (+6 more)
web/: Dockerfile
(+19 files in other folders)
