[project]
name = "techblog-cms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.12,<24.0",
    "django==4.2.10",
    "django-compressor>=4.4,<5.0",
    "django-cors-headers>=4.3,<5.0",
    "django-csp>=3.7,<4.0",
    "django-extensions>=3.2,<4.0",
    "django-redis>=5.4,<6.0",
    "flake8>=6.1,<7.0",
    "gunicorn>=21.2,<22.0",
    "isort>=5.13,<6.0",
    "linkify-it-py>=2.0,<3.0",
    "markdown>=3.5,<4.0",
    "pillow>=10.0,<11.0",
    "playwright>=1.40,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "pygments>=2.15,<3.0",
    "pytest>=7.4,<8.0",
    "pytest-cov>=4.1,<5.0",
    "pytest-django>=4.7,<5.0",
    "python-decouple>=3.8,<4.0",
    "redis>=5.0,<6.0",
    "requests>=2.31,<3.0",
    "ruff>=0.13.0",
    "sentry-sdk>=1.39,<2.0",
    "whitenoise>=6.5,<7.0",
]
